tests/NormalTests/paczka2/big_fuzzy/14050547.err
Error in line 6: A635 A365 15,5
Error in line 16: hIYDIlhPbs S809 41,7
Error in line 32: oB8 A635 68,1
Error in line 39: 91w8Ol S6 24,9
Error in line 34: tvs0SMtv A635 36,6
Error in line 48: 91w8Ol S6 20,1
Error in line 55: 91w8Ol S809 78,6
Error in line 57: tvs0SMtv S6 41,2
Error in line 60: RNDR A365 29,9
Error in line 70: tvs0SMtv A365 16,9
Error in line 77: o8 S809 87,7
Error in line 89: BauRxtG7p S6 39,6
Error in line 97: A6M5 A6M5 86,9
Error in line 96: A635 S6 17,5
Error in line 90: RNDR A635 284,9
Error in line 73: oB8 S809 51,0
Error in line 100: BauRxtG7p S6 71,5
Error in line 115: BauRxtG7p A365 35,6
Error in line 120: A635 S6 85,3
Error in line 129: tvs0SMtv A635 72,2
Error in line 133: BauRxtG7p A635 17,5
Error in line 140: BauRxtG7p A365 31,8
Error in line 139: tvs0SMtv A365 85,4
Error in line 141: BauRxtG7p S809 89,2
Error in line 146: oB8 A365 64,6
Error in line 152: oB8 A635 71,5
Error in line 162: RNDR S809 32,5
Error in line 161: 91w8Ol S809 18,5
Error in line 178: RNDR S6 66,1
Error in line 156: BauRxtG7p A635 185,4
Error in line 204: BauRxtG7p S809 86,4
Error in line 207: A635 S6 135,6
Error in line 214: tvs0SMtv A635 25,5
Error in line 222: 91w8Ol S6 53,0
Error in line 229: RNDR S6 81,7
Error in line 233: 91w8Ol S809 3,5
Error in line 234: 91w8Ol A365 97,2
